# qDebugTest

./: CMakeLists.txt  main.cpp
